# mc-server

./: .gitmodules  CMakeLists.txt  main.cpp  server.cpp
mc/: CMakeLists.txt  io_impl_socket.cpp
mc/src/: connection.cpp  connection.h  io.cpp  io.h  packet.cpp  packet.h  types.cpp  types.h  util.h
mc/src/connection/: connection.cpp  connection.h  handshake.cpp  login.cpp  play.cpp  status.cpp
mc/src/packet/: cb_pong.cpp  cb_status.cpp  packet.cpp  sb_empty.cpp  sb_handshake.cpp  sb_ping.cpp
test/: CMakeLists.txt  io_impl_tests.cpp  test_packets.cpp  test_types.cpp
